fix text size in different resolutions

--- a/filedownloader/filedownloader/res/layout/custom_notification_layout.xml
+++ b/filedownloader/filedownloader/res/layout/custom_notification_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <ImageView android:id="@+id/progress_notify_image"
+    <ImageView android:id="@+id/progress_download_image"
         android:layout_width="wrap_content"
         android:layout_height="400dp"
         android:layout_margin="10dp">
@@ -14,14 +14,14 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginTop="10dp"
-        android:layout_toRightOf="@+id/progress_notify_image">
+        android:layout_toRightOf="@+id/progress_download_image">
 
         <TextView android:id="@+id/progress_title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Title"
             android:textStyle="bold"
-            android:textSize="15dp"
+            android:textSize="@dimen/text_size"
             android:textColor="#fff">
         </TextView>
 
@@ -32,28 +32,28 @@
             android:layout_marginRight="5dp"
             android:text="100 / 100"
             android:textStyle="normal"
-            android:textSize="15dp"
+            android:textSize="@dimen/text_size"
             android:textColor="#fff">
         </TextView>
 
-        <TextView android:id="@+id/download_filename"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/progress_title_text"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="5dp"
-            android:text=""
-            android:textStyle="normal"
-            android:textSize="15dp"
-            android:textColor="#fff">
-        </TextView>
+        <!--<TextView android:id="@+id/download_filename"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/progress_title_text"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_marginRight="5dp"-->
+            <!--android:text=""-->
+            <!--android:textStyle="normal"-->
+            <!--android:textSize="@dimen/text_size"-->
+            <!--android:textColor="#fff">-->
+        <!--</TextView>-->
 
 
         <ProgressBar android:id="@+id/download_progressbar_in_service"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_below="@+id/download_filename"
+            android:layout_below="@+id/progress_title_text"
             android:layout_marginTop="3dp"
             android:indeterminate="false"
             android:padding="4dip">
